# libhasso

./: CMakeLists.txt  README  README.md  libhasso.kdev4
src/: CMakeLists.txt  ihash.hpp  whirlpool.c  whirlpool.h  whirlpoolwrapper.cpp  whirlpoolwrapper.hpp
testapp/: CMakeLists.txt  examples.hpp  main.cpp
